// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle addCECDevice action 1`] = `
Array [
  Object {
    "devices": Array [
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 100,
        "ipAddress": "10.0.0.1",
        "make": "Sony",
        "model": "LN52",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 101,
        "ipAddress": "10.0.0.2",
        "make": "LG",
        "model": "SN123",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 102,
        "ipAddress": "10.0.0.3",
        "make": "Samsung",
        "model": "LN52-XDL",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 103,
        "ipAddress": "10.0.0.4",
        "make": "TataSky",
        "model": "KDL",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "SetupBox",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 104,
        "ipAddress": "10.0.0.5",
        "make": "DishTv",
        "model": "LN52",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "PlayBack",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 105,
        "ipAddress": "10.0.0.6",
        "make": "Samsung",
        "model": "LN52XD",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 107,
        "ipAddress": "10.0.0.7",
        "make": "Sony",
        "model": "LDX",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 108,
        "ipAddress": "10.0.0.8",
        "make": "Sony",
        "model": "AMP",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "Amplifier",
      },
    ],
    "type": "ADD_CEC_DEVICES",
  },
]
`;

exports[`should handle updateCECDevice action 1`] = `
Array [
  Object {
    "devices": Array [
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 100,
        "ipAddress": "10.0.0.1",
        "make": "Sony",
        "model": "LN52",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 101,
        "ipAddress": "10.0.0.2",
        "make": "LG",
        "model": "SN123",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 102,
        "ipAddress": "10.0.0.3",
        "make": "Samsung",
        "model": "LN52-XDL",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 103,
        "ipAddress": "10.0.0.4",
        "make": "TataSky",
        "model": "KDL",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "SetupBox",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 104,
        "ipAddress": "10.0.0.5",
        "make": "DishTv",
        "model": "LN52",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "PlayBack",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 105,
        "ipAddress": "10.0.0.6",
        "make": "Samsung",
        "model": "LN52XD",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 107,
        "ipAddress": "10.0.0.7",
        "make": "Sony",
        "model": "LDX",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "TV",
      },
      CecDevice {
        "cecVersion": "1.5",
        "changeInputCommand": Array [],
        "detection": "CEC",
        "id": 108,
        "ipAddress": "10.0.0.8",
        "make": "Sony",
        "model": "AMP",
        "powerCommand": Array [],
        "statesDetected": Array [],
        "type": "Amplifier",
      },
    ],
    "type": "ADD_CEC_DEVICES",
  },
  Object {
    "device": CecDevice {
      "cecVersion": "1.5",
      "changeInputCommand": Array [],
      "detection": "CEC",
      "id": 100,
      "ipAddress": "10.0.0.1",
      "make": "Sony",
      "model": "LN52",
      "powerCommand": Array [],
      "statesDetected": Array [],
      "type": "TV",
    },
    "id": 101,
    "type": "UPDATE_CEC_DEVICE",
  },
]
`;
